--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -7,11 +7,10 @@
     </head>
     <body>
         <header>
-            <h1>My Resources</h1>
+            <h1>{{title}}</h1>
         </header>
         <main>
-            <p>This is a list of resources that I have collected during my learning journey of web development</p>
-
+            {{ content | safe }}
         </main>
     </body>
 </html>
