Feat: add pages folder and create page layout

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <h1>{{title}}</h1>
+            <h1>My Resources</h1>
         </header>
         <main>
             {{ content | safe }}
