Feat: add navigation bar and style it

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -10,6 +10,7 @@
         <header>
             <h1>My Resources</h1>
         </header>
+          {% include "./navbar.njk" %}
         <main>
             {{ content | safe }}
         </main>
