Style: remove main div from page layout and add space between list items

--- a/src/_includes/page.njk
+++ b/src/_includes/page.njk
@@ -3,9 +3,9 @@ layout: base.njk
 tags: pages
 ---
 
-<main>
+<div class="page">
   <h2>{{ title }}</h2>
-  <article>
+  <section class="page-article">
     {{ content | safe }}
-  </article>
-</main>
+  </section>
+</div>
