--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,6 +15,11 @@ html {
 *:after {
     box-sizing: inherit;
 }
+
+a {
+    color: var(--font-color);
+    text-decoration: none;
+}
   
 body {
     display: grid;
@@ -26,6 +31,7 @@ body {
     color: var(--font-color);
     background-color: var(--primary-color);
 }
+
 
 header {
     grid-column: 1/3;
@@ -52,10 +58,6 @@ nav li:not(:last-child) {
     margin-bottom: 10px;
 }
 
-nav a {
-    color: var(--font-color);
-    text-decoration: none;
-}
 
 nav a:hover {
     font-weight: bolder;
@@ -65,4 +67,18 @@ main {
     grid-column: 2/3;
     padding-left: .5rem;
     max-width: 70ch;
+}
+
+main li {
+    color: var(--font-color);
+    margin-bottom: var(--layout-spacing);
+}
+
+main a:hover {
+    font-weight: bolder;
+    color: var(--highlight-color);
+}
+
+.page li > * {
+    margin: 0 0 5px 0;
 }
